[package]
name = "dragon-puzzle"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_asset_loader = { version = "0.12.1", features = ["2d", "stageless"] }
iyes_loopless = "0.7.1"

[dependencies.bevy]
version = "0.8.1"
default-features = false
features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_winit",

    "png",

    "x11"
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
