[package]
name = "dragon-puzzle"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_asset_loader = { version = "0.14.0", features = ["2d", "stageless"] }
leafwing-input-manager = { version = "0.7.0", default-features = false }
iyes_loopless = "0.9.0"
bevy_common_assets = { version = "0.4.0", features = ["json"] }
serde = "1.0.147"

[dependencies.bevy]
version = "0.9.0"
default-features = false
features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_winit",

    "png",

    "x11"
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
